manual/deploymentV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-deploymentv2
  namespace: nginx-deployment
  labels:
    app:  nginx-container
spec:
  replicas:  3
  selector:
    matchLabels:
      app:  nginx-container
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  nginx-container
    spec:
      containers:
      - image:  httpd
        name:  nginx-container
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 10      
        ports:
        - containerPort:  80
          name:  nginx-port
