manual/Serv-Ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name:  nginx-service
  namespace: nginx-deployment
spec:
  selector:
    app:  nginx-container
  type: ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  namespace: nginx-deployment
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
